--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.1.4",
-    "flickity": "^2.2.1"
+    "flickity": "^2.2.1",
+    "jquery": "^3.4.1"
   }
 }
