--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news-analyzer",
   "version": "0.0.1",
   "description": "News service",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
