--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/EvgeniyL0/NewsAnalyzer#readme",
   "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.8.6",
-    "@babel/preset-env": "7.8.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
     "autoprefixer": "9.7.4",
-    "babel-loader": "8.0.6",
+    "babel-loader": "^8.0.6",
     "cross-env": "7.0.0",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
@@ -43,7 +43,7 @@
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "babel-polyfill": "6.26.0",
+    "babel-polyfill": "^6.26.0",
     "core-js": "3.1.4",
     "flickity": "2.2.1",
     "jquery": "3.5.0"
